manifest/objects/Apttus_XApps__FieldWrapper__c.object
<CustomObject>
    <fields>
        <fullName>Apttus_XApps__Boolean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_XApps__Currency__c</fullName>
        <label>Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_XApps__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_XApps__Datetime__c</fullName>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_XApps__String__c</fullName>
        <label>String</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>FieldWrapper</label>
    <nameField>
        <label>FieldWrapper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FieldWrappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>